--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
-version: '3.8'
-
+version: '3'
 services:
+  db:
+    image: mongo
+    ports:
+      - "27017:27017"
   web:
-    build: .
+    image: cloud_computing_final_assignment-web
     ports:
       - "5001:5001"
     depends_on:
       - db
-
-  db:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
