--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -24,14 +24,14 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        run: docker build -t bookclub-api .
+        run: docker build -t cloud_computing_final_assignment-web .
 
       - name: Log build status
         run: echo "$(date -Iminutes)\nstudent-name\nimage successfully built" > log.txt || echo "$(date -Iminutes)\nstudent-name\nimage not able to be built" > log.txt
         shell: bash
 
       - name: Upload log
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v2
         with:
           name: log.txt
           path: log.txt
@@ -45,13 +45,20 @@ jobs:
         ports:
           - 27017:27017
       web:
-        image: bookclub-api
+        image: cloud_computing_final_assignment-web
         ports:
           - 5001:5001
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Wait for services to be ready
+        run: |
+          until curl -s http://localhost:5001; do
+            echo "Waiting for web service..."
+            sleep 5
+          done
 
       - name: Install dependencies
         run: pip install pytest requests
@@ -60,7 +67,7 @@ jobs:
         run: pytest -v tests/assn3_tests.py > assn3_test_results.txt
 
       - name: Upload test results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v2
         with:
           name: assn3_test_results.txt
           path: assn3_test_results.txt
@@ -74,13 +81,20 @@ jobs:
         ports:
           - 27017:27017
       web:
-        image: bookclub-api
+        image: cloud_computing_final_assignment-web
         ports:
           - 5001:5001
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Wait for services to be ready
+        run: |
+          until curl -s http://localhost:5001; do
+            echo "Waiting for web service..."
+            sleep 5
+          done
 
       - name: Read and execute queries
         run: |
@@ -91,7 +105,7 @@ jobs:
           done < query.txt
 
       - name: Upload query results
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v2
         with:
           name: response.txt
           path: response.txt
