--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -24,7 +24,7 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        run: docker build -t cloud_computing_final_assignment-web .
+        run: docker build -t bookclub-api .
 
       - name: Log build status
         run: echo "$(date -Iminutes)\nstudent-name\nimage successfully built" > log.txt || echo "$(date -Iminutes)\nstudent-name\nimage not able to be built" > log.txt
@@ -45,7 +45,7 @@ jobs:
         ports:
           - 27017:27017
       web:
-        image: cloud_computing_final_assignment-web
+        image: bookclub-api
         ports:
           - 5001:5001
 
@@ -81,7 +81,7 @@ jobs:
         ports:
           - 27017:27017
       web:
-        image: cloud_computing_final_assignment-web
+        image: bookclub-api
         ports:
           - 5001:5001
 
@@ -98,7 +98,6 @@ jobs:
 
       - name: Read and execute queries
         run: |
-          docker-compose up -d
           while read -r query; do
             response=$(curl -s "http://localhost:5001/books${query}")
             echo -e "query: ${query}\nresponse: ${response}\n" >> response.txt
