--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
-version: '3'
+version: '3.8'
+
 services:
-  db:
-    image: mongo
-    ports:
-      - "27017:27017"
   web:
+    image: bookclub-api
     build: .
     ports:
       - "5001:5001"
     depends_on:
       - db
-    environment:
-      - MONGO_URI=mongodb://db:27017/booksdb
+
+  db:
+    image: mongo
+    ports:
+      - "27017:27017"
