--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -24,7 +24,7 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        run: docker build -t bookclub-api .
+        run: docker build -t <your-dockerhub-username>/bookclub-api .
 
       - name: Log build status
         run: echo "$(date -Iminutes)\nstudent-name\nimage successfully built" > log.txt || echo "$(date -Iminutes)\nstudent-name\nimage not able to be built" > log.txt
@@ -42,10 +42,12 @@ jobs:
     services:
       db:
         image: mongo
+        container_name: bookclub-api-db
         ports:
           - 27017:27017
       web:
-        image: bookclub-api
+        image: <your-dockerhub-username>/bookclub-api
+        container_name: bookclub-api-web
         ports:
           - 5001:5001
 
@@ -78,10 +80,12 @@ jobs:
     services:
       db:
         image: mongo
+        container_name: bookclub-api-db
         ports:
           - 27017:27017
       web:
-        image: bookclub-api
+        image: <your-dockerhub-username>/bookclub-api
+        container_name: bookclub-api-web
         ports:
           - 5001:5001
 
