--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3'
-services:
-  db:
-    image: mongo
-    container_name: bookclub-api-db
-    ports:
-      - 27017:27017
+version: '3.8'
 
-  web:
-    image: bookclub-api
-    container_name: bookclub-api-web
+services:
+  bookclub-api:
     build: .
+    image: bookclub-api
     ports:
-      - 5001:5001
+      - "5001:5001"
     depends_on:
       - db
-    environment:
-      - MONGO_URL=mongodb://db:27017
+
+  db:
+    image: mongo
+    ports:
+      - "27017:27017"
