--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,25 @@ version: '3.8'
 
 services:
   db:
-    image: mongo
-    container_name: bookclub-api-db
+    image: mongo:latest
+    container_name: mongo
     ports:
-      - 27017:27017
+      - "27017:27017"
+    networks:
+      - bookclub-network
 
-  web:
-    build:
-      context: .
-    image: bookclub-api
+  api:
+    build: .
     container_name: bookclub-api
     ports:
-      - 5001:5001
+      - "5001:5001"
     depends_on:
       - db
+    networks:
+      - bookclub-network
     environment:
-      - MONGO_URI=mongodb://db:27017
+      - MONGO_URL=mongodb://db:27017/
+
+networks:
+  bookclub-network:
+    driver: bridge
